# Build-Patch-Tool

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: main.ts  styles.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/assets/: commands.json  tooltips.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
